# GeneralsGameCode

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json
.github/: AI_CONTEXT_VERIFICATION_FAILURE_ANALYSIS.md
Core/: CMakeLists.txt
Core/GameEngine/: CMakeLists.txt
Core/GameEngine/Include/Common/: FileSystem.h  OptionPreferences.h  STLTypedefs.h  UserPreferences.h
Core/GameEngine/Include/GameClient/: Line2D.h  MapUtil.h
Core/GameEngine/Source/Common/: GpuPreferenceExports.cpp  OptionPreferences.cpp
Core/GameEngine/Source/Common/System/: ArchiveFileSystem.cpp
Core/GameEngine/Source/GameClient/: MapUtil.cpp
Core/GameEngineDevice/: CMakeLists.txt
Core/GameEngineDevice/Include/W3DDevice/GameClient/: BaseHeightMap.h  CameraShakeSystem.h  HeightMap.h  TerrainTex.h  TileData.h  W3DMouse.h  W3DShaderManager.h  W3DSmudge.h  W3DSnow.h  W3DTreeBuffer.h  W3DWater.h  WorldHeightMap.h
Core/GameEngineDevice/Source/StdDevice/Common/: StdLocalFileSystem.cpp
Core/GameEngineDevice/Source/W3DDevice/GameClient/: BaseHeightMap.cpp  CameraShakeSystem.cpp  FlatHeightMap.cpp  HeightMap.cpp  TerrainTex.cpp  TileData.cpp  W3DMouse.cpp  W3DShaderManager.cpp  W3DSmudge.cpp  W3DSnow.cpp  W3DTerrainTracks.cpp  W3DTreeBuffer.cpp  W3DView.cpp  WorldHeightMap.cpp
Core/GameEngineDevice/Source/W3DDevice/GameClient/Water/: W3DWater.cpp  W3DWaterTracks.cpp
Core/GameEngineDevice/Source/Win32Device/Common/: Win32LocalFileSystem.cpp
Core/Libraries/Source/WWVegas/: CMakeLists.txt
Core/Libraries/Source/WWVegas/WW3D2/: CMakeLists.txt  dx8caps.cpp  dx8caps.h  dx8fvf.cpp  dx8fvf.h  dx8indexbuffer.cpp  dx8indexbuffer.h  dx8polygonrenderer.h  dx8renderer.cpp  dx8texman.h  dx8vertexbuffer.cpp  dx8vertexbuffer.h  dx8webbrowser.h  dx8wrapper.cpp  dx8wrapper.h  dynamesh.cpp  formconv.cpp  formconv.h  line3d.cpp  missingtexture.cpp  missingtexture.h  pointgr.cpp  rddesc.h  ringobj.cpp  seglinerenderer.cpp  sphereobj.cpp  static_sort_list.cpp  streakRender.cpp  surfaceclass.cpp  surfaceclass.h  texture.cpp  texture.h  texturefilter.cpp  texturefilter.h  textureloader.cpp  textureloader.h  ww3dformat.cpp  ww3dformat.h
Core/Libraries/Source/WWVegas/WWMath/: matrix3d.cpp  matrix4.cpp
Core/Tools/DebugWindow/: StdAfx.h
Core/Tools/ParticleEditor/: CMakeLists.txt  StdAfx.h
Core/Tools/WW3D/max2w3d/: CMakeLists.txt
Generals/Code/GameEngine/Include/Common/: BezierSegment.h  STLTypedefs.h  UserPreferences.h
Generals/Code/GameEngine/Include/GameClient/: Line2D.h  MapUtil.h
Generals/Code/GameEngine/Include/GameLogic/: ScriptEngine.h
Generals/Code/GameEngine/Source/Common/: GameEngine.cpp
Generals/Code/GameEngine/Source/Common/Bezier/: BezFwdIterator.cpp  BezierSegment.cpp
Generals/Code/GameEngine/Source/Common/INI/: INIMapCache.cpp
Generals/Code/GameEngine/Source/GameClient/: Line2D.cpp  MapUtil.cpp
Generals/Code/GameEngine/Source/GameLogic/AI/: AIGroup.cpp
Generals/Code/GameEngine/Source/GameLogic/ScriptEngine/: ScriptEngine.cpp
Generals/Code/GameEngine/Source/GameLogic/System/: GameLogic.cpp
Generals/Code/GameEngineDevice/Include/W3DDevice/GameClient/: W3DMouse.h  W3DShaderManager.h  W3DWater.h
Generals/Code/GameEngineDevice/Source/W3DDevice/GameClient/: HeightMap.cpp  TerrainTex.cpp  W3DCustomEdging.cpp  W3DDebugIcons.cpp  W3DInGameUI.cpp  W3DMouse.cpp  W3DScene.cpp  W3DShaderManager.cpp  W3DShroud.cpp  W3DStatusCircle.cpp  W3DTerrainTracks.cpp  W3DView.cpp  W3DWebBrowser.cpp
Generals/Code/Libraries/Source/WWVegas/: CMakeLists.txt
Generals/Code/Libraries/Source/WWVegas/WW3D2/: CMakeLists.txt  assetmgr.cpp  boxrobj.cpp  camera.cpp  dazzle.cpp  ddsfile.cpp  ddsfile.h  decalmsh.cpp  dx8caps.cpp  dx8caps.h  dx8fvf.cpp  dx8fvf.h  dx8indexbuffer.cpp  dx8indexbuffer.h  dx8renderer.cpp  dx8texman.h  dx8todx9.h  dx8vertexbuffer.cpp  dx8vertexbuffer.h  dx8wrapper.cpp  dx8wrapper.h  mapper.cpp  matrixmapper.cpp  render2d.cpp  scene.cpp  shader.cpp  sortingrenderer.cpp  texture.cpp  texture.h  texturefilter.cpp  textureloader.cpp  textureloader.h  vertmaterial.cpp  vertmaterial.h  ww3d.cpp
Generals/Code/Main/: CMakeLists.txt  WinMain.cpp
Generals/Code/Tools/ParticleEditor/: StdAfx.h
Generals/Code/Tools/W3DView/: CMakeLists.txt
Generals/Code/Tools/WorldBuilder/include/: StdAfx.h  wbview.h  wbview3d.h
Generals/Code/Tools/WorldBuilder/src/: DrawObject.cpp  ObjectPreview.cpp  PointerTool.cpp  wbview.cpp  wbview3d.cpp
GeneralsMD/Code/: CMakeLists.txt
GeneralsMD/Code/GameEngine/Include/Common/: BezierSegment.h  GlobalData.h  STLTypedefs.h  UserPreferences.h
GeneralsMD/Code/GameEngine/Include/GameClient/: Line2D.h  MapUtil.h
GeneralsMD/Code/GameEngine/Include/GameLogic/: ScriptEngine.h
GeneralsMD/Code/GameEngine/Source/Common/: GameEngine.cpp  GlobalData.cpp
GeneralsMD/Code/GameEngine/Source/Common/Bezier/: BezFwdIterator.cpp  BezierSegment.cpp
GeneralsMD/Code/GameEngine/Source/Common/INI/: INIMapCache.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/: Line2D.cpp  MapUtil.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/AI/: AIGroup.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/ScriptEngine/: ScriptEngine.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/System/: GameLogic.cpp
GeneralsMD/Code/GameEngineDevice/Include/W3DDevice/GameClient/: W3DCustomEdging.h  W3DMouse.h  W3DShaderManager.h  W3DSnow.h  W3DTreeBuffer.h  W3DWater.h
GeneralsMD/Code/GameEngineDevice/Source/W3DDevice/GameClient/: BaseHeightMap.cpp  FlatHeightMap.cpp  HeightMap.cpp  TerrainTex.cpp  W3DBibBuffer.cpp  (+19 more)
GeneralsMD/Code/Libraries/Source/WWVegas/: CMakeLists.txt
GeneralsMD/Code/Main/: CMakeLists.txt  WinMain.cpp
GeneralsMD/Code/Tools/GUIEdit/: CMakeLists.txt
GeneralsMD/Code/Tools/ParticleEditor/: CMakeLists.txt  StdAfx.h
GeneralsMD/Code/Tools/W3DView/: CMakeLists.txt
GeneralsMD/Code/Tools/WorldBuilder/: CMakeLists.txt
GeneralsMD/Code/Tools/WorldBuilder/include/: WHeightMapEdit.h  wbview.h  wbview3d.h
GeneralsMD/Code/Tools/WorldBuilder/src/: DrawObject.cpp  ObjectPreview.cpp  PointerTool.cpp  WHeightMapEdit.cpp  wbview.cpp  wbview3d.cpp
cmake/: dx8.cmake  dx9.cmake
(+76 files in other folders)
