set(WW3D2_SRC
    ${CMAKE_CURRENT_SOURCE_DIR}/aabtree.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/aabtree.h
    #${CMAKE_CURRENT_SOURCE_DIR}/aabtreebuilder.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/aabtreebuilder.h
    ${CMAKE_CURRENT_SOURCE_DIR}/agg_def.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/agg_def.h
    ${CMAKE_CURRENT_SOURCE_DIR}/animatedsoundmgr.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/animatedsoundmgr.h
    #${CMAKE_CURRENT_SOURCE_DIR}/animobj.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/animobj.h
    #${CMAKE_CURRENT_SOURCE_DIR}/assetmgr.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/assetmgr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/assetstatus.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/assetstatus.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bitmaphandler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/bitmaphandler.h
    #${CMAKE_CURRENT_SOURCE_DIR}/bmp2d.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/bmp2d.h
    #${CMAKE_CURRENT_SOURCE_DIR}/boxrobj.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/boxrobj.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bwrender.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/bwrender.h
    #${CMAKE_CURRENT_SOURCE_DIR}/camera.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/camera.h
    #${CMAKE_CURRENT_SOURCE_DIR}/classid.h # unused
    ${CMAKE_CURRENT_SOURCE_DIR}/collect.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/collect.h
    ${CMAKE_CURRENT_SOURCE_DIR}/colorspace.h
    ${CMAKE_CURRENT_SOURCE_DIR}/coltest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/coltest.h
    ${CMAKE_CURRENT_SOURCE_DIR}/coltype.h
    ${CMAKE_CURRENT_SOURCE_DIR}/composite.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/composite.h
    #${CMAKE_CURRENT_SOURCE_DIR}/dazzle.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/dazzle.h
    #${CMAKE_CURRENT_SOURCE_DIR}/ddsfile.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/ddsfile.h
    #${CMAKE_CURRENT_SOURCE_DIR}/decalmsh.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/decalmsh.h
    ${CMAKE_CURRENT_SOURCE_DIR}/decalsys.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/decalsys.h
    ${CMAKE_CURRENT_SOURCE_DIR}/distlod.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/distlod.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dllist.h
    # DX8 buffer files - NOT in Core (needed only by games for bridge)
    #${CMAKE_CURRENT_SOURCE_DIR}/dx8caps.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/dx8caps.h
    #${CMAKE_CURRENT_SOURCE_DIR}/dx8fvf.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/dx8fvf.h
    #${CMAKE_CURRENT_SOURCE_DIR}/dx8indexbuffer.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/dx8indexbuffer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dx8list.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dx8polygonrenderer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dx8polygonrenderer.h
    #${CMAKE_CURRENT_SOURCE_DIR}/dx8renderer.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/dx8renderer.h
    #${CMAKE_CURRENT_SOURCE_DIR}/dx8rendererdebugger.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/dx8rendererdebugger.h
    #${CMAKE_CURRENT_SOURCE_DIR}/dx8texman.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/dx8texman.h
    #${CMAKE_CURRENT_SOURCE_DIR}/dx8vertexbuffer.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/dx8vertexbuffer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dx8webbrowser.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dx8webbrowser.h
    #${CMAKE_CURRENT_SOURCE_DIR}/dx8wrapper.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/dx8wrapper.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dynamesh.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dynamesh.h
    ${CMAKE_CURRENT_SOURCE_DIR}/font3d.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/font3d.h
    ${CMAKE_CURRENT_SOURCE_DIR}/formconv.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/formconv.h
    ${CMAKE_CURRENT_SOURCE_DIR}/FramGrab.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/framgrab.h
    # Animation files - NOT included in Core (games have their own copies)
    ${CMAKE_CURRENT_SOURCE_DIR}/hanim.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/hanim.h
    #${CMAKE_CURRENT_SOURCE_DIR}/hanimmgr.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/hanimmgr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/hcanim.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/hcanim.h
    #${CMAKE_CURRENT_SOURCE_DIR}/hlod.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/hlod.h
    ${CMAKE_CURRENT_SOURCE_DIR}/hmdldef.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/hmdldef.H
    #${CMAKE_CURRENT_SOURCE_DIR}/hmorphanim.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/hmorphanim.h
    #${CMAKE_CURRENT_SOURCE_DIR}/hrawanim.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/hrawanim.h
    ${CMAKE_CURRENT_SOURCE_DIR}/htree.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/htree.h
    #${CMAKE_CURRENT_SOURCE_DIR}/htreemgr.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/htreemgr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/intersec.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/intersec.h
    ${CMAKE_CURRENT_SOURCE_DIR}/intersec.inl
    ${CMAKE_CURRENT_SOURCE_DIR}/inttest.h
    ${CMAKE_CURRENT_SOURCE_DIR}/layer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/layer.h
    #${CMAKE_CURRENT_SOURCE_DIR}/light.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/light.h
    #${CMAKE_CURRENT_SOURCE_DIR}/lightenvironment.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/lightenvironment.h
    ${CMAKE_CURRENT_SOURCE_DIR}/line3d.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/line3d.h
    #${CMAKE_CURRENT_SOURCE_DIR}/linegrp.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/linegrp.h
    #${CMAKE_CURRENT_SOURCE_DIR}/mapper.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/mapper.h
    ${CMAKE_CURRENT_SOURCE_DIR}/matinfo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/matinfo.h
    #${CMAKE_CURRENT_SOURCE_DIR}/matpass.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/matpass.h
    #${CMAKE_CURRENT_SOURCE_DIR}/matrixmapper.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/matrixmapper.h
    #${CMAKE_CURRENT_SOURCE_DIR}/mesh.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/mesh.h
    #${CMAKE_CURRENT_SOURCE_DIR}/meshbuild.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/meshbuild.h
    ${CMAKE_CURRENT_SOURCE_DIR}/meshdam.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/meshdam.h
    #${CMAKE_CURRENT_SOURCE_DIR}/meshgeometry.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/meshgeometry.h
    #${CMAKE_CURRENT_SOURCE_DIR}/meshmatdesc.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/meshmatdesc.h
    #${CMAKE_CURRENT_SOURCE_DIR}/meshmdl.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/meshmdl.h
    #${CMAKE_CURRENT_SOURCE_DIR}/meshmdlio.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/metalmap.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/metalmap.h
    ${CMAKE_CURRENT_SOURCE_DIR}/missingtexture.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/missingtexture.h
    #${CMAKE_CURRENT_SOURCE_DIR}/motchan.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/motchan.h
    #${CMAKE_CURRENT_SOURCE_DIR}/nullrobj.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/nullrobj.h
    #${CMAKE_CURRENT_SOURCE_DIR}/part_buf.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/part_buf.h
    #${CMAKE_CURRENT_SOURCE_DIR}/part_emt.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/part_emt.h
    #${CMAKE_CURRENT_SOURCE_DIR}/part_ldr.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/part_ldr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/pivot.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/pivot.h
    ${CMAKE_CURRENT_SOURCE_DIR}/pointgr.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/pointgr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/polyinfo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/polyinfo.h
    ${CMAKE_CURRENT_SOURCE_DIR}/predlod.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/predlod.h
    ${CMAKE_CURRENT_SOURCE_DIR}/prim_anim.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/prim_anim.h
    ${CMAKE_CURRENT_SOURCE_DIR}/projector.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/projector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/proto.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/proto.h
    ${CMAKE_CURRENT_SOURCE_DIR}/proxy.h
    ${CMAKE_CURRENT_SOURCE_DIR}/rddesc.h
    #${CMAKE_CURRENT_SOURCE_DIR}/render2d.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/render2d.h
    ${CMAKE_CURRENT_SOURCE_DIR}/render2dsentence.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/render2dsentence.h
    ${CMAKE_CURRENT_SOURCE_DIR}/renderobjectrecycler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/renderobjectrecycler.h
    # Rendering infrastructure - (DX8-dependent)
    ${CMAKE_CURRENT_SOURCE_DIR}/rendobj.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/rendobj.h
    #${CMAKE_CURRENT_SOURCE_DIR}/rinfo.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/rinfo.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ringobj.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ringobj.h
    ${CMAKE_CURRENT_SOURCE_DIR}/robjlist.h
    #${CMAKE_CURRENT_SOURCE_DIR}/scene.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/scene.h
    ${CMAKE_CURRENT_SOURCE_DIR}/segline.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/segline.h
    ${CMAKE_CURRENT_SOURCE_DIR}/seglinerenderer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/seglinerenderer.h
    #${CMAKE_CURRENT_SOURCE_DIR}/shader.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/shader.h
    ${CMAKE_CURRENT_SOURCE_DIR}/shattersystem.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/shattersystem.h
    #${CMAKE_CURRENT_SOURCE_DIR}/shdlib.h
    ${CMAKE_CURRENT_SOURCE_DIR}/snappts.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/snapPts.h
    #${CMAKE_CURRENT_SOURCE_DIR}/sortingrenderer.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/sortingrenderer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/soundlibrarybridge.h
    ${CMAKE_CURRENT_SOURCE_DIR}/soundrobj.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/soundrobj.h
    ${CMAKE_CURRENT_SOURCE_DIR}/sphereobj.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/sphereobj.h
    ${CMAKE_CURRENT_SOURCE_DIR}/static_sort_list.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/static_sort_list.h
    ${CMAKE_CURRENT_SOURCE_DIR}/statistics.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/statistics.h
    ${CMAKE_CURRENT_SOURCE_DIR}/streak.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/streak.h
    ${CMAKE_CURRENT_SOURCE_DIR}/streakRender.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/streakRender.h
    ${CMAKE_CURRENT_SOURCE_DIR}/stripoptimizer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/stripoptimizer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/surfaceclass.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/surfaceclass.h
    #${CMAKE_CURRENT_SOURCE_DIR}/texproject.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/texproject.h
    #${CMAKE_CURRENT_SOURCE_DIR}/textdraw.cpp # unused
    ${CMAKE_CURRENT_SOURCE_DIR}/textdraw.h
    # Texture system - NOT in Core (DX8-dependent - includes <d3d8.h>)
    #${CMAKE_CURRENT_SOURCE_DIR}/texture.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/texture.h
	#${CMAKE_CURRENT_SOURCE_DIR}/texturefilter.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/texturefilter.h
    #${CMAKE_CURRENT_SOURCE_DIR}/textureloader.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/textureloader.h
    #${CMAKE_CURRENT_SOURCE_DIR}/texturethumbnail.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/texturethumbnail.h
    #${CMAKE_CURRENT_SOURCE_DIR}/vertmaterial.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/vertmaterial.h
    ${CMAKE_CURRENT_SOURCE_DIR}/visrasterizer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/visrasterizer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/w3d_dep.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/w3d_dep.h
    #${CMAKE_CURRENT_SOURCE_DIR}/w3d_file.h
    ${CMAKE_CURRENT_SOURCE_DIR}/w3d_obsolete.h
    ${CMAKE_CURRENT_SOURCE_DIR}/w3d_util.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/w3d_util.h
    ${CMAKE_CURRENT_SOURCE_DIR}/w3derr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/w3dexclusionlist.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/w3dexclusionlist.h
    # WW3D core and format - NOT in Core (DX8-dependent - includes <d3d8.h>)
    #${CMAKE_CURRENT_SOURCE_DIR}/ww3d.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/ww3d.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ww3dformat.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ww3dformat.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ww3dids.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ww3dtrig.h
)

add_library(corei_ww3d2 INTERFACE)

target_sources(corei_ww3d2 INTERFACE ${WW3D2_SRC})

target_include_directories(corei_ww3d2 INTERFACE
    ../../../Include/WWVegas/WW3D2
)

if (NOT IS_VS6_BUILD)
    target_link_libraries(corei_ww3d2 INTERFACE
        comsuppw
    )
endif()

target_link_libraries(corei_ww3d2 INTERFACE
    core_browserengine
    d3d9  # DirectX 9 library for DX9Wrapper
)
